--- a/sass/style.scss
+++ b/sass/style.scss
@@ -303,6 +303,11 @@ body {font-family: 'Quicksand', serif;
   opacity: 0.2;
   background-color: silver;
 }
+.offerBoxActive{
+  opacity: 0.2;
+  background-color: silver;
+}
+
 .offerOpacityBox{
   border-radius: 5px;
   height: 80px;
@@ -321,7 +326,20 @@ body {font-family: 'Quicksand', serif;
   padding-bottom: 100px;
   font-size: 17px;
   height: 100vh;
-  //
+		visibility: hidden;
+    animation-name: showup;
+    animation-duration: 2s;
+    animation-fill-mode: forwards;
+}
+@keyframes showup {
+  from {
+    opacity: 0;
+    visibility: hidden
+  }
+  to {
+    opacity: 1;
+    visibility: visible
+  }
 }
 .offerVisible {
   display: none;
